# testing_instalacion_complypro

./: .example.env  .gitignore  ComplyPro.bat  README.md  pyproject.toml  run.bat  update_script.py
